--- a/chatbot/Jarvis/requirements.txt
+++ b/chatbot/Jarvis/requirements.txt
@@ -1,255 +1,54 @@
-annotated-types==0.7.0
-anyio==4.9.0
-apparmor==4.0.1
-appdirs==1.4.4
-argcomplete==3.1.4
-attrs==23.2.0
-Babel==2.10.3
-bcc==0.29.1
-bcrypt==3.2.2
-beautifulsoup4==4.12.3
-blinker==1.9.0
-Bottleneck==1.3.5
-Brlapi==0.8.5
-Brotli==1.1.0
-BTrees==6.1
-certifi==2023.11.17
-cffi==1.17.1
-Chameleon==4.6.0
-chardet==5.2.0
-click==8.1.6
-cloud-init==24.4.1
-colorama==0.4.6
-command-not-found==0.3
-configobj==5.0.8
-contourpy==1.0.7
-cryptography==41.0.7
-cssselect==1.2.0
-cupshelpers==1.0
-cycler==0.11.0
-dbus-python==1.3.2
-decorator==5.1.1
-defer==1.0.6
+asttokens==3.0.0
+attrs==25.3.0
+backcall==0.2.0
+beautifulsoup4==4.13.4
+bleach==6.2.0
+certifi==2025.4.26
+charset-normalizer==3.4.2
+decorator==5.2.1
 defusedxml==0.7.1
-distro==1.9.0
-distro-info==1.7+build1
-dnspython==2.6.1
-duplicity==2.1.4
-et-xmlfile==1.0.1
-fasteners==0.18
-Flask==3.1.0
-fonttools==4.46.0
-freetype-py==2.4.0
-fs==2.4.16
-gpg==1.18.0
-grok==6.0
-grokcore.annotation==4.0
-grokcore.catalog==4.0
-grokcore.chameleon==4.1
-grokcore.component==4.1.1
-grokcore.content==4.1
-grokcore.formlib==4.0
-grokcore.layout==4.0
-grokcore.message==4.0
-grokcore.security==4.0
-grokcore.site==4.0
-grokcore.traverser==4.0
-grokcore.view==4.0
-grokcore.viewlet==4.0
-groq==0.24.0
-gTTS==2.5.4
-gyp==0.1
-h11==0.16.0
-html5lib==1.1
-httpcore==1.0.9
-httplib2==0.20.4
-httpx==0.28.1
-idna==3.6
-importlib-metadata==4.12.0
-itsdangerous==2.2.0
-jaraco.classes==3.2.1
-jeepney==0.8.0
-Jinja2==3.1.2
-jsonpatch==1.32
-jsonpointer==2.0
-jsonschema==4.10.3
-keyring==24.3.1
-kiwisolver==0.0.0
-language-selector==0.1
-launchpadlib==1.11.0
-lazr.restfulclient==0.14.6
-lazr.uri==1.0.6
-LibAppArmor==4.0.1
-libevdev==0.5
-louis==3.29.0
-lxml==5.2.1
-lz4==4.0.2+dfsg
-Mako==1.3.2.dev0
-Markdown==3.5.2
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-martian==2.1
-matplotlib==3.6.3
-mdurl==0.1.2
-monotonic==1.6
-more-itertools==10.2.0
-MouseInfo==0.1.3
-mpmath==0.0.0
-multipart==1.2.1
-mutagen==1.46.0
-netaddr==0.8.0
-nftables==0.1
-ntpsec==1.2.2
-numexpr==2.9.0
-numpy==1.26.4
-oauthlib==3.2.2
-odfpy==1.4.2
-olefile==0.46
-openpyxl==3.1.2
-packaging==24.0
-pandas==2.1.4+dfsg
-paramiko==2.12.0
-persistent==6.1.1
+docopt==0.6.2
+executing==2.2.0
+fastjsonschema==2.21.1
+idna==3.10
+ipython==8.12.3
+jedi==0.19.2
+Jinja2==3.1.6
+jsonschema==4.23.0
+jsonschema-specifications==2025.4.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyterlab_pygments==0.3.0
+MarkupSafe==3.0.2
+matplotlib-inline==0.1.7
+mistune==3.1.3
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+packaging==25.0
+pandocfilters==1.5.1
+parso==0.8.4
 pexpect==4.9.0
-pillow==10.2.0
-pipx==1.4.3
-platformdirs==4.2.0
-psutil==5.9.8
+pickleshare==0.7.5
+pipreqs==0.5.0
+platformdirs==4.3.7
+prompt_toolkit==3.0.51
 ptyprocess==0.7.0
-py-cpuinfo==9.0.0
-PyAudio==0.2.13
-PyAutoGUI==0.9.54
-pycairo==1.25.1
-pycparser==2.22
-pycryptodomex==3.20.0
-pycups==2.0.1
-pydantic==2.11.4
-pydantic_core==2.33.2
-pygame==2.6.1
-PyGetWindow==0.0.9
-Pygments==2.17.2
-PyGObject==3.48.2
-PyJWT==2.7.0
-pykerberos==1.1.14
-PyMsgBox==1.0.9
-PyNaCl==1.5.0
-pyparsing==3.1.1
-pyperclip==1.9.0
-PyQt5==5.15.10
-PyQt5-sip==12.13.0
-PyQt6==6.6.1
-PyQt6-sip==13.6.0
-PyRect==0.2.0
-pyrsistent==0.20.0
-PyScreeze==1.0.1
-pyserial==3.5
-python-apt==2.7.7+ubuntu4
-python-dateutil==2.8.2
-python-debian==0.1.49+ubuntu2
-python-gettext==5.0
-python3-xlib==0.15
-pytweening==1.2.0
-pytz==2024.1
-pyudev==0.24.0
-pyxdg==0.28
-PyYAML==6.0.1
-repo==2
-reportlab==4.1.0
-requests==2.31.0
-rich==13.7.1
-rlPyCairo==0.3.0
-SciPy==1.11.4
-SecretStorage==3.3.3
-setuptools==68.1.2
-six==1.16.0
-sniffio==1.3.1
-soupsieve==2.5
-ssh-import-id==5.11
-sympy==1.12
-systemd-python==235
-tables==3.9.2
-transaction==5.0
-typing-inspection==0.4.0
+pure_eval==0.2.3
+Pygments==2.19.1
+python-dateutil==2.9.0.post0
+pyzmq==26.4.0
+referencing==0.36.2
+requests==2.32.3
+rpds-py==0.24.0
+six==1.17.0
+soupsieve==2.7
+stack-data==0.6.3
+tinycss2==1.4.0
+tornado==6.4.2
+traitlets==5.14.3
 typing_extensions==4.13.2
-ubuntu-drivers-common==0.0.0
-ubuntu-pro-client==8001
-ufoLib2==0.16.0
-ufw==0.36.2
-unattended-upgrades==0.1
-unicodedata2==15.1.0
-urllib3==2.0.7
-usb-creator==0.3.16
-userpath==1.9.1
-vboxapi==1.0
-wadllib==1.3.6
+urllib3==2.4.0
+wcwidth==0.2.13
 webencodings==0.5.1
-websockets==10.4
-Werkzeug==3.1.3
-wheel==0.42.0
-xdg==5
-xkit==0.0.0
-yt-dlp==2024.4.9
-z3c.flashmessage==4.0
-z3c.pt==5.0
-zc.catalog==4.0
-zc.lockfile==3.0.post1
-ZConfig==4.2
-zdaemon==5.1
-zipp==1.0.0
-ZODB==6.0.1
-zodbpickle==4.2
-zope.annotation==5.1
-zope.app.appsetup==5.0
-zope.app.publication==5.0
-zope.app.wsgi==5.3
-zope.authentication==5.1
-zope.browser==3.1
-zope.browserpage==5.0
-zope.browserresource==5.2
-zope.cachedescriptors==5.1
-zope.catalog==5.0
-zope.component==6.0
-zope.configuration==6.0
-zope.container==6.1
-zope.contentprovider==6.0
-zope.contenttype==5.2
-zope.datetime==5.1
-zope.deferredimport==5.0
-zope.deprecation==5.1
-zope.dottedname==6.0
-zope.error==5.1
-zope.errorview==2.0
-zope.event==5.0
-zope.exceptions==5.2
-zope.filerepresentation==6.1
-zope.formlib==6.1
-zope.generations==5.1.0
-zope.hookable==7.0
-zope.i18n==5.2
-zope.i18nmessageid==7.0
-zope.index==7.0
-zope.interface==7.2
-zope.intid==5.1
-zope.keyreference==6.1
-zope.lifecycleevent==5.1
-zope.location==5.1
-zope.login==3.1
-zope.minmax==2.3
-zope.pagetemplate==5.1
-zope.password==6.0
-zope.principalregistry==5.1
-zope.processlifetime==3.1
-zope.proxy==6.1
-zope.ptresource==5.1
-zope.publisher==7.3
-zope.schema==7.0.1
-zope.security==7.3
-zope.securitypolicy==5.1
-zope.session==5.1
-zope.site==5.1
-zope.size==5.1
-zope.tal==5.1
-zope.tales==6.1
-zope.testing==5.1
-zope.traversing==5.1
-zope.viewlet==5.1
+yarg==0.1.9
