clean all projct && update .gitignore

--- a/App-frontend/angular.json
+++ b/App-frontend/angular.json
@@ -71,6 +71,9 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+                    "options": {
+            "proxyConfig": "proxy.conf.json"
+          },
           "configurations": {
             "production": {
               "browserTarget": "Mission_Entreprise_Angular:build:production"
