--- a/App_Backend/pom.xml
+++ b/App_Backend/pom.xml
@@ -70,6 +70,11 @@
             <artifactId>jjwt-api</artifactId>
             <version>0.11.2</version> <!-- This version may work -->
         </dependency>
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>4.5.0</version>
+        </dependency>
 
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
