--- a/App-frontend/angular.json
+++ b/App-frontend/angular.json
@@ -124,5 +124,8 @@
       }
     }
   },
-  "defaultProject": "Mission_Entreprise_Angular"
+  "defaultProject": "Mission_Entreprise_Angular",
+  "cli": {
+    "analytics": "9bd23848-060b-42e2-8dbf-09b74760a2bc"
+  }
 }
