--- a/App-frontend/package.json
+++ b/App-frontend/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.13.1",
+    "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "ngx-extended-pdf-viewer": "^16.0.0",
