--- a/.github/workflows/cv_parser_ci.yml
+++ b/.github/workflows/cv_parser_ci.yml
@@ -59,5 +59,5 @@ jobs:
 
             Regards,
             GitHub Actions -CV_PARSER_MODEL 
-            for any questions , Please contact YASSER JEMLI 
+            for any questions , Please contact YASSER JEMLI ( THE SENDER for this email )
           attachments: CV_PARSER_MODEL/results/parsed_resume_*.json
