fix senders of the email
Signed-off-by: Yasser-Jemli <yasserjamli37@gmail.com>

--- a/.github/workflows/cv_parser_ci.yml
+++ b/.github/workflows/cv_parser_ci.yml
@@ -51,6 +51,7 @@ jobs:
             bouslimi.Azaiez@esprit.tn
             Nadine.MAAZOUN@Esprit.tn
             nader.BENHAMMOUDA@esprit.tn
+            yaaser.jemli@esprit.tn
           from: ${{ secrets.EMAIL_USER }}
           body: |
             Hello,
