--- a/App_Backend/.gitignore
+++ b/App_Backend/.gitignore
@@ -31,3 +31,12 @@ build/
 
 ### VS Code ###
 .vscode/
+# Ignore application configuration files
+**/application.properties
+**/application.yml
+**/application-*.properties
+**/application-*.yml
+
+# Ignore local development files
+**/local.properties
+**/local.yml
