--- a/App_Backend/pom.xml
+++ b/App_Backend/pom.xml
@@ -115,6 +115,12 @@
             <version>0.11.2</version> <!-- This is the implementation dependency -->
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>2.6.0</version> <!-- Use the latest stable version -->
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
         </dependency>
