--- a/.github/workflows/cv_parser_ci.yml
+++ b/.github/workflows/cv_parser_ci.yml
@@ -54,7 +54,7 @@ jobs:
           node-version: '20'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --legacy-peer-deps
 
       - name: Run Angular lint
         continue-on-error: true
