--- a/.github/workflows/cv_parser_ci.yml
+++ b/.github/workflows/cv_parser_ci.yml
@@ -68,7 +68,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: App-backend
+        working-directory: backend
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
