--- a/.github/workflows/cv_parser_ci.yml
+++ b/.github/workflows/cv_parser_ci.yml
@@ -1,9 +1,10 @@
 name: CV Parser CI
 
 on:
-  workflow_dispatch:
   push:
-    branches: [ main ]
+    branches: [ '**' ]      # Triggers on push to any branch
+  pull_request:             # Triggers on PRs to any branch
+  workflow_dispatch:        # Allows manual trigger
 
 jobs:
   CV_PARSER_CHECKS_STANDARD:
@@ -83,9 +84,47 @@ jobs:
         continue-on-error: true
         run: mvn verify || true
 
+  CHATBOT_CHECKS:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: chatbot
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+
+      - name: Install dependencies
+        run: |
+          pip install -r requirements.txt
+
+      - name: Run flake8
+        continue-on-error: true
+        run: |
+          pip install flake8
+          flake8 . > flake8_report.txt || true
+
+      - name: Run black check
+        continue-on-error: true
+        run: |
+          pip install black
+          black --check . > black_report.txt || true
+
+      - name: Upload chatbot lint reports
+        uses: actions/upload-artifact@v4
+        with:
+          name: chatbot-lint-reports
+          path: |
+            flake8_report.txt
+            black_report.txt
+
   run-parser:
     runs-on: ubuntu-latest
-    needs: [CV_PARSER_CHECKS_STANDARD, APP_FRONTEND_CHECKS, BACKEND_CHECKS]
+    needs: [CV_PARSER_CHECKS_STANDARD, APP_FRONTEND_CHECKS, BACKEND_CHECKS, CHATBOT_CHECKS]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -123,7 +162,6 @@ jobs:
           - sami.boukesra@esprit.tn
           - imed.chakhari@esprit.tn
           - bouslimi.azaiez@esprit.tn
-          - nadine.maazoun@esprit.tn
           - nader.benhammouda@esprit.tn
           - yaaser.jemli@esprit.tn
     steps:
