--- a/App-frontend/angular.json
+++ b/App-frontend/angular.json
@@ -70,18 +70,21 @@
           },
           "defaultConfiguration": "production"
         },
-        "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
-          "configurations": {
-            "production": {
-              "browserTarget": "Mission_Entreprise_Angular:build:production"
-            },
-            "development": {
-              "browserTarget": "Mission_Entreprise_Angular:build:development"
-            }
-          },
-          "defaultConfiguration": "development"
-        },
+"serve": {
+  "builder": "@angular-devkit/build-angular:dev-server",
+  "options": {
+    "proxyConfig": "proxy.conf.json"
+  },
+  "configurations": {
+    "production": {
+      "browserTarget": "Mission_Entreprise_Angular:build:production"
+    },
+    "development": {
+      "browserTarget": "Mission_Entreprise_Angular:build:development"
+    }
+  },
+  "defaultConfiguration": "development"
+},
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
@@ -123,5 +126,8 @@
       }
     }
   },
-  "defaultProject": "Mission_Entreprise_Angular"
+  "defaultProject": "Mission_Entreprise_Angular",
+  "cli": {
+    "analytics": false
+  }
 }
