--- a/.github/workflows/cv_parser_ci.yml
+++ b/.github/workflows/cv_parser_ci.yml
@@ -124,7 +124,7 @@ jobs:
 
   run-parser:
     runs-on: ubuntu-latest
-    needs: [CV_PARSER_CHECKS_STANDARD, APP_FRONTEND_CHECKS, BACKEND_CHECKS, CHATBOT_CHECKS]
+    needs: [CV_PARSER_CHECKS_STANDARD,]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -164,6 +164,7 @@ jobs:
           - bouslimi.azaiez@esprit.tn
           - nader.benhammouda@esprit.tn
           - yaaser.jemli@esprit.tn
+          - Nadine.MAAZOUN@Esprit.tn
     steps:
       - name: Download result artifact
         uses: actions/download-artifact@v4
